--- a/css/style.css
+++ b/css/style.css
@@ -1,129 +1,45 @@
-/* Basic styling */
-* {
+#blocks {
+    margin:20px;
+}
+article {
+    bacground: #fff;
+
+    padding:10px;
     box-sizing: border-box;
-    padding: 0;
-    margin: 0;
 }
-body {
-    font-family: sans-serif;
-}
+
 nav {
-    background: #222;
-    padding: 5px 20px;
+    background:#2196f3;
 }
-ul {
+
+nav ul {
+    padding: 0;
     list-style-type: none;
 }
-a {
-    color: white;
-    text-decoration: none;
-}
-a:hover {
-    text-decoration: underline;
-}
-.logo a:hover {
-    text-decoration: none;
-}
-.menu li {
-    font-size: 16px;
-    padding: 15px 5px;
-    white-space: nowrap;
-}
-.logo a,
-.toggle a {
-    font-size: 20px;
-}
-.button.secondary {
-    border-bottom: 1px #444 solid;
-}
-/* Mobile menu */
-.menu {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-}
-.toggle {
-    order: 1;
-}
-.item.button {
-    order: 2;
-}
-.item {
-    width: 100%;
+nav a {
     text-align: center;
-    order: 3;
-    display: none;
-}
-.item.active {
+    text-decoration: none;
+    color:#ffffff;
     display: block;
+    padding: 10px;
+
 }
 
-/* Tablet menu */
-@media all and (min-width: 600px) {
-    .menu {
+nav a:hover {
+    background-color: #0d47a1;
+}
+
+
+@media screen and (min-width:768px){
+    nav ul{
+        display: flex;
         justify-content: center;
     }
-    .logo {
-        flex: 1;
+    nav li {
+       flex: 1 1 0;
     }
-    .toggle {
-        flex: 1;
-        text-align: right;
-    }
-    .item.button {
-        width: auto;
-        order: 1;
-        display: block;
-    }
-    .toggle {
-        order: 2;
-    }
-    .button.secondary {
-        border: 0;
-    }
-    .button a {
-        padding: 7.5px 15px;
-        background: teal;
-        border: 1px #006d6d solid;
-    }
-    .button.secondary a {
-        background: transparent;    
-    }
-    .button a:hover {
-        text-decoration: none;
-    }
-    .button:not(.secondary) a:hover {
-        background: #006d6d;
-        border-color: #005959;
-    }
-    .button.secondary a:hover {
-        color: #ddd;
-    } 
-}
-
-/* Desktop menu */
-@media all and (min-width: 900px) {
-    .item {
-        display: block;
-        width: auto;
-    }
-    .toggle {
-        display: none;
-    }
-    .logo {
-        order: 0;
-    }
-    .item {
-        order: 1;
-    }
-    .button {
-        order: 2;
-    }
-    .menu li {
-        padding: 15px 10px;
-    }
-    .menu li.button {
-        padding-right: 0;
+    nav {
+        display: flex;
+        justify-content: space-between;
     }
 }
